--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
 certifi==2019.3.9
+cffi==1.12.3
 Click==7.0
 dominate==2.3.5
 Flask==1.0.3
 Flask-Bootstrap==3.3.7.1
-gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+mkl-fft==1.0.12
+mkl-random==1.0.2
+numpy==1.16.4
+olefile==0.46
+Pillow==6.0.0
+pycparser==2.19
+scipy==1.3.0
+six==1.12.0
+torch==1.1.0
+torchvision==0.3.0
 visitor==0.1.3
-Werkzeug==0.15.2
+Werkzeug==0.15.4
